tests/machine/x/go/join_multi.go
//go:build ignore

// Generated by Mochi compiler v0.10.25 on 2025-07-14T04:34:56Z

package main

import (
	"fmt"
)

func main() {
	customers := []Customer{Customer{
		ID:   1,
		Name: "Alice",
	}, Customer{
		ID:   2,
		Name: "Bob",
	}}
	orders := []Order{Order{
		ID:         100,
		CustomerID: 1,
	}, Order{
		ID:         101,
		CustomerID: 2,
	}}
	items := []Item{Item{
		OrderID: 100,
		Sku:     "a",
	}, Item{
		OrderID: 101,
		Sku:     "b",
	}}
	result := func() []Result {
		results := []Result{}
		for _, o := range orders {
			for _, c := range customers {
				if !(o.CustomerID == c.ID) {
					continue
				}
				for _, i := range items {
					if !(o.ID == i.OrderID) {
						continue
					}
					results = append(results, Result{
						Name: c.Name,
						Sku:  i.Sku,
					})
				}
			}
		}
		return results
	}()
	fmt.Println("--- Multi Join ---")
	for _, r := range result {
		fmt.Println(r.Name, "bought item", r.Sku)
	}
}
